# px4_ros2_collision_prevention

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: params.yaml  replay_params.yaml
launch/: depth_replay.launch.py  obstacle_avoidance.launch.py
px4_ros2_collision_prevention/: __init__.py  depth_replay_node.py  realsense_obstacle_node.py
resource/: px4_ros2_collision_prevention
test/: test_depth_to_bins.py
